force-app/main/default/objects/SalesArea__c/SalesArea__c.object-meta.xml
<CustomObject>
    <description>SAP Sales Area  - managed by smartInteract.
Used to model Zimmer Country Subsidiaries.</description>
    <label>Sales Area</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SalesArea Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>