force-app/main/default/objects/SalesArea__c/fields/DistribChannel__c.field-meta.xml
<CustomField>
    <fullName>DistribChannel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distrib Channel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>