force-app/main/default/objects/SalesArea__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Division</label>
    <length>10</length>
    <type>Text</type>
</CustomField>