force-app/main/default/objects/SalesArea__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Org</label>
    <length>10</length>
    <type>Text</type>
</CustomField>