force-app/main/default/objects/SalesArea__c/fields/SapId__c.field-meta.xml
<CustomField>
    <fullName>SapId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SapId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>